[project]
name = "helloworld-llama-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "litellm>=1.65.4.post1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "." # Add the current directory (your project root) to the Python path
]
